# hybrid-rag-document-retriever

./: .env.example  README.md  docker-compose.yml  pyproject.toml
hybrid_rag/: manage.py  pytest.ini
hybrid_rag/core/: __init__.py  functions.py
hybrid_rag/core/application/: __init__.py  dto.py  interfaces.py  use_cases.py
hybrid_rag/core/domain/: __init__.py  entities.py  value_objects.py
hybrid_rag/core/infrastructure/adapters/: __init__.py  chunker.py  extract_embed.py  fusion.py  reranker.py  task_dispatcher.py
hybrid_rag/core/infrastructure/repositories/: __init__.py  django_repositories.py
hybrid_rag/core/infrastructure/runtime/: model_registry.py  settings.py
hybrid_rag/core/infrastructure/services/: container.py
hybrid_rag/document/: admin.py  apps.py  tasks.py  urls.py
hybrid_rag/document/api/: document_controller.py  serializers.py
hybrid_rag/document/management/commands/: warm_models.py
hybrid_rag/document/migrations/: 0001_initial.py  0002_processingrunmodel_observability.py
hybrid_rag/document/models/: __init__.py  doc_chunks.py  doc_processing.py  documents.py
hybrid_rag/hybrid_rag/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
hybrid_rag/tests/runtime/: test_model_registry.py  test_retry_classifier.py  test_runtime_settings.py
