[project]
name = "hybrid-rag-document-retriever"
version = "0.1.0"
description = "Hybrid RAG document retriever backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "celery>=5.4.0",
  "django>=6.0.4",
  "djangorestframework>=3.16.0",
  "langchain-text-splitters>=0.3.8",
  "pgvector>=0.4.1",
  "psycopg[binary]>=3.2.1",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "rank-bm25>=0.2.2",
  "redis>=6.0.0",
  "scikit-learn>=1.6.1",
  "sentence-transformers>=3.4.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-django>=4.11.1",
]
